--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting Visualizer</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -75,15 +75,15 @@
     </footer>
 
 
-    <script src="./main.js"></script>
-    <script src="./visualizations.js"></script>
+    <script src="main.js"></script>
+    <script src="visualizations.js"></script>
 
-    <script src="./bubble_sort.js"></script>
-    <script src="./selection_sort.js"></script>
-    <script src="./insertion_sort.js"></script>
-    <script src="./merge_sort.js"></script>
-    <script src="./quick_sort.js"></script>
-    <script src="./heap_sort.js"></script>
+    <script src="bubble_sort.js"></script>
+    <script src="script/selection_sort.js"></script>
+    <script src="script/insertion_sort.js"></script>
+    <script src="script/merge_sort.js"></script>
+    <script src="script/quick_sort.js"></script>
+    <script src="script/heap_sort.js"></script>
 
   </body>
 </html>
