--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     <script src="visualizations.js"></script>
 
     <script src="bubble_sort.js"></script>
-    <script src="script/selection_sort.js"></script>
-    <script src="script/insertion_sort.js"></script>
-    <script src="script/merge_sort.js"></script>
-    <script src="script/quick_sort.js"></script>
-    <script src="script/heap_sort.js"></script>
+    <script src="selection_sort.js"></script>
+    <script src="insertion_sort.js"></script>
+    <script src="merge_sort.js"></script>
+    <script src="quick_sort.js"></script>
+    <script src="heap_sort.js"></script>
 
   </body>
 </html>
